# ROS2_Webots_DOG

./: README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/go2_control/lib/go2_control/: plot_results
ros2_ws/install/go2_control/share/go2_control/: package.dsv  package.ps1  package.sh
ros2_ws/install/go2_control/share/go2_control/launch/: control.launch.py
ros2_ws/install/go2_description/share/go2_description/: package.sh
ros2_ws/install/go2_description/share/go2_description/worlds/: .empty.wbproj
ros2_ws/src/go2_control/: package.xml  setup.py  test_smc_fix.py
ros2_ws/src/go2_control/go2_control/: go2_kinematics.py  plot_results.py  smc_controller.py  smc_plugin.py
ros2_ws/src/go2_description/: CMakeLists.txt  package.xml
ros2_ws/src/go2_description/launch/: webots.launch.py
ros2_ws/src/go2_description/protos/: Go2Description.proto
ros2_ws/src/go2_description/urdf/: go2_description.urdf
ros2_ws/src/go2_description/worlds/: empty.wbt
